# my-thesis

./: .gitignore  README.md  pyproject.toml  requirement.txt
eda/: visualization.ipynb  wordcloud.ipynb
preprocessing/: v1.ipynb
src/bertopic/: embedding.ipynb  hdbscan_tune.ipynb  kmeans_tune.ipynb  transformer.ipynb  v1.ipynb
src/bertopic/transformer/: coherence_results_v1.csv  coherence_results_v2.csv
src/bertopic/tunning/hdbscan_all_distilroberta_v1_v1/: coherence_results.csv  coherence_results_backup.csv
src/bertopic/tunning/hdbscan_v1/: coherence_results.csv
src/bertopic/tunning/kmeans_all_distilroberta_v1_v1/: coherence_results_kmeans.csv
src/dtm/: tunning.ipynb  v1.ipynb
src/dtm/tunning/cs/: tuning_results.csv
src/dtm/tunning/math/: tuning_results.csv
src/dtm/tunning/physics/: tuning_results.csv
src/lda/: tunning.ipynb  v1.ipynb
src/lda/tunning/cs/: tuning_results.csv
src/lda/tunning/math/: tuning_results.csv
src/lda/tunning/physics/: tuning_results.csv
src/top2vec/: hdbscan.ipynb  tunning.ipynb  v1.ipynb
src/top2vec/transformer/: coherence_results_v1.csv
src/top2vec/tunning/sentence_transformers_all_MiniLM_L6_v2/: tuning_results.csv
