[project]
name = "program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.1",
    "wordcloud>=1.9.4",
    "scikit-learn>=1.3.0",
    "gensim>=4.4.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "fastopic>=1.0.1",
    "topmost>=1.0.2",
    "nbformat>=5.10.4",
    "pyldavis>=3.4.1",
    "ipywidgets>=8.1.7",
    "top2vec>=1.0.36",
    "spacy>=3.8.11",
    "einops>=0.8.2",
    "peft>=0.18.1",
    "adapters>=1.2.0",
]
[tool.uv.extra-build-dependencies]
tomotopy = ["numpy"]
